# cewler

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
misc/: dev-cewler.py  dev-server.py  misc.txt  vhs.txt
src/cewler/: __init__.py  cewler.py  config.py  constants.py  spider.py
tests/: test_spider.py
tests/results/: emails-test.txt  urls-test.txt  wordlist-test.txt
tests/server/: 200.html  broken_html.html  email_addresses.html  head_and_metadata.html  html_comments.html  html_comments2.html  image  index.html  json.json  odd_chars.html  script.js  styles.css  text.txt
