[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project]
name = "cewler"
version = "1.0.8"
authors = [
  { name="Roy Solberg", email="pypi-0q238r@roysolberg.com" },
]
description = "Custom Word List generator Redefined"
keywords = ["custom wordlist", "wordlist generator", "bug bounty hunting", "security testing", "pen testing", "crawler", "spider"]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "rich==13.3.1",
    "Scrapy==2.8.0",
    "tld==0.12.7"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Scrapy",
    "Intended Audience :: Information Technology",
    "Natural Language :: English"
]

[project.scripts]
cewler = "cewler.cewler:cewler"

[project.urls]
"Homepage" = "https://github.com/roys/cewler"
"Bug Tracker" = "https://github.com/roys/cewler/issues"
"Changelog" = "https://github.com/roys/cewler/blob/main/CHANGELOG.md"
