[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project]
name = "cewler"
version = "1.3.1"
authors = [
  { name="Roy Solberg", email="pypi-0q238r@roysolberg.com" },
]
description = "Custom Word List generator Redefined"
keywords = ["custom wordlist", "wordlist generator", "bug bounty hunting", "security testing", "pen testing", "crawler", "spider"]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pypdf==5.4.0",
    "rich==14.0.0",
    "Scrapy==2.12.0",
    "tld==0.13",
    "Twisted==24.11.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Scrapy",
    "Intended Audience :: Information Technology",
    "Natural Language :: English"
]

[project.scripts]
cewler = "cewler.cewler:main"

[project.urls]
"Homepage" = "https://github.com/roys/cewler"
"Bug Tracker" = "https://github.com/roys/cewler/issues"
"Changelog" = "https://github.com/roys/cewler/blob/main/CHANGELOG.md"
