[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cewler"
version = "1.4.0"
authors = [
  { name="Roy Solberg", email="pypi-0q238r@roysolberg.com" },
]
description = "Custom Word List generator Redefined"
keywords = ["custom wordlist", "wordlist generator", "bug bounty hunting", "security testing", "pen testing", "crawler", "spider"]
readme = "README.md"
license = "CC-BY-NC-4.0"
requires-python = ">=3.9"
dependencies = [
    "pypdf~=6.1.1",
    "rich>=14.1,<14.3",
    "Scrapy~=2.13.3",
    "tld~=0.13.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Scrapy",
    "Intended Audience :: Information Technology",
    "Natural Language :: English"
]

[project.scripts]
cewler = "cewler.cewler:main"

[project.urls]
"Homepage" = "https://github.com/roys/cewler"
"Bug Tracker" = "https://github.com/roys/cewler/issues"
"Changelog" = "https://github.com/roys/cewler/blob/main/CHANGELOG.md"
